# textgenie

./: .gitignore  CLAUDE.md  Makefile  docker-compose.dev.yml  docker-compose.yml
backend/: .dockerignore  CLAUDE.md  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 10e0c0bf4dad_create_users_and_sessions_tables.py  a1b2c3d4e5f6_add_paired_with_id_to_transactions.py  a81b913e26e1_create_categories_table.py  b3f7a2c1d4e5_add_webhook_token_and_messages_table.py  b5c2e8f0a4d7_add_bills_table.py  b7d3e9f1a2c4_add_account_type_and_card_digits_to_banks.py  c4f8b2a1d5e6_create_banks_table.py  c8a1d4f9b3e2_add_admin_and_llm_usage.py  c9e2f5a8d301_add_currency_to_users_and_transactions.py  d5e9c3b2a7f8_create_bank_senders_and_templates.py  d92a4f1b8c30_add_metadata_blacklist_to_users.py  e1a37b04c8f2_rename_tx_amount_and_add_original.py  e5a91c7d2f08_create_transactions_table.py  f846c77c7c3d_add_default_categories.py
backend/app/: config.py  constants.py  logging_config.py  main.py  models.py  schemas.py
backend/app/routers/: admin.py  auth.py  banks.py  bills.py  (+5 more)
backend/scripts/: backfill_transactions.py
backend/tests/: conftest.py  factories.py  test_admin.py  test_auth.py  test_banks.py  test_bill_payment_matcher.py  test_bills.py  test_categories.py  test_health.py  test_llm.py  test_logging_config.py  test_messages.py  test_metadata_blacklist.py  test_sender_matcher.py  test_settings.py  test_template_parser.py  test_transactions.py  test_transfer_matcher.py  test_webhook.py  test_webhook_banks.py  test_webhook_bills.py
(+101 files in other folders)
