[project]
name = "textgenie-backend"
version = "0.1.0"
requires-python = "==3.12.*"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
]

[dependency-groups]
dev = [
    "httpx",
    "ruff",
    "pytest",
]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "W",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
