[project]
name = "textgenie-backend"
version = "0.1.0"
requires-python = "==3.12.13"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "pymysql",
    "bcrypt",
    "alembic",
    "email-validator",
    "google-genai",
]

[dependency-groups]
dev = [
    "httpx",
    "ruff",
    "pytest",
]

[tool.ruff]
target-version = "py312"
exclude = ["alembic/versions", ".venv"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "W",
]

[tool.ruff.lint.per-file-ignores]
"app/services/llm/base.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
